--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Thinh Ro</title>
 </head>
 <body>
-    <h1>Thịnh Rô</h1>
+    <div class="header">Thịnh Rô</div>
+    <div class="content">
+        description
+    </div>
+    <div class="footer">TPT</div>
 </body>
 </html>
